로그인시 닉네임 초기화 에러 수정 / /record api들 모두 player_idx 반환하도록 수정